--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ title: Documentación
 nombres: Manuela Orlas Rengifo
 submodulo: Lógica de Programación
 periodo: 2023-2
-url_foto: 
+url_foto: c:\Users\JUAN DIEGO ORLAS\Downloads\IMG_20230321_202940_995-fotor-20231016165423.jpg
 
